# addon_proxy

./: .gitignore  Cargo.toml  Makefile.toml  Procfile  README.md  landing.html  proxy_config.toml
bench_data/: proxy_cfg_with_cache.toml  proxy_cfg_without_cache.toml  top.json
benches/: proxy_benchmark.rs
src/: helpers.rs  hyper_helpers.rs  lib.rs  main.rs  proxy.rs
src/proxy/: business.rs  config.rs  controller.rs  default_client.rs  on_request.rs  validations.rs
test_data/: manifest.json  proxy_cfg.toml  proxy_cfg_no_cache.toml
test_framework/: Cargo.toml
test_framework/src/: lib.rs
tests/: caching.rs  integration_test.rs  routing.rs
